# pyrfu-optimization

./: .gitignore  LICENSE.txt  pyproject.toml
scripts/: download_data.py  reduce.py  svd.py  wavelet.py
